--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,74 +4,43 @@ name: docker
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ main ]
   pull_request:
-    paths-ignore:
-      - .gitlab-ci.yml
-      - .github/workflows/test.yml
-      - .github/workflows/generate.yml
-  repository_dispatch:
-    types: [ metanorma/metanorma-docker ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
 
 jobs:
-  test-docker:
+  build:
     runs-on: ubuntu-latest
-    container: docker://metanorma/mn
+    container:
+      image: metanorma/metanorma:latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.METANORMA_CI_PAT_TOKEN || github.token }}
           submodules: true
 
-      - uses: actions/cache@v2
+      - name: Metanorma generate site
+        id: build-and-publish
+        uses: actions-mn/build-and-publish@v1
         with:
-          path: /config/fonts
-          key: fontist-docker
-          restore-keys: fontist-docker
-
-      - uses: actions/cache@v2
-        with:
-          path: ~/.metanorma-ietf-workgroup-cache.json
-          key: metanorma-ietf-workgroup-cache
-          restore-keys: metanorma-ietf-workgroup-cache
-
-      - uses: metanorma/metanorma-build-scripts/gh-rubygems-setup-action@master
-        with:
-          token: ${{ secrets.METANORMA_CI_PAT_TOKEN }}
-
-      - run: |
-          curl -L --retry 3 https://raw.githubusercontent.com/metanorma/metanorma-build-scripts/master/gemfile-to-bundle-add.sh | bash
-
-      - uses: actions-mn/cli/site-gen@main
-        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           agree-to-terms: true
 
-      - uses: actions/upload-artifact@master
-        with:
-          name: site
-          path: site
 
-  deploy-gh-pages:
-    if: github.ref == 'refs/heads/master'
+  deploy:
     runs-on: ubuntu-latest
-    needs: test-docker
+    needs: build
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v1
+      - name: Deploy to GitHub Pages
+        uses: actions-mn/deploy-pages@v1
         with:
-          name: site
-
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ github.token }}
-          publish_dir: ./site
-          force_orphan: true
-          user_name: ${{ github.actor }}
-          user_email: ${{ format('{0}@users.noreply.github.com', github.actor) }}
-          commit_message: "${{ format('Deploy to GitHub Pages: {0}', github.sha) }}"
-
-      - uses: kolpav/purge-artifacts-action@v1
-        with:
-          token: ${{ github.token }}
-          expire-in: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
