--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -4,51 +4,33 @@ name: generate
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ main ]
   pull_request:
-    paths-ignore:
-      - .gitlab-ci.yml
-      - .github/workflows/test.yml
-      - .github/workflows/docker.yml
   workflow_dispatch:
 
 jobs:
-  test-linux:
-    name: Test on ${{ matrix.os }}
+  site-generate:
+    name: Generate on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    concurrency:
+      group: '${{ github.workflow }}-${{ matrix.os }}-${{ github.head_ref || github.ref_name }}'
+      cancel-in-progress: true
     strategy:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.METANORMA_CI_PAT_TOKEN || github.token }}
           submodules: true
 
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/xml2rfc
-          key: xml2rfc
-          restore-keys: xml2rfc
+      - name: Setup Metanorma toolchain
+        uses: actions-mn/setup@main
 
-      - uses: actions/cache@v2
-        with:
-          path: ~/.fontist
-          key: fontist-${{ runner.os }}
-          restore-keys: fontist-${{ runner.os }}
-
-      - uses: actions/cache@v2
-        with:
-          path: ~/.metanorma-ietf-workgroup-cache.json
-          key: metanorma-ietf-workgroup-cache
-          restore-keys: metanorma-ietf-workgroup-cache
-
-      - if: matrix.os == 'windows-latest'
-        run: rm Gemfile
-
-      - uses: actions-mn/setup@master
-
-      - uses: actions-mn/cli/site-gen@main
+      - name: Metanorma generate site
+        uses: actions-mn/build-and-publish@v1
         with:
           agree-to-terms: true
+          destination: artifact
+          artifact-name: ${{ github.event.repository.name }}-${{ runner.os }}
